<resources>
    <string name="app_name">DoNow</string>
    <string name="anonymous">Hi, Anonymous</string>
    <string name="addtask">AddTask</string>
    <string name="options">options</string>
    <string name="sort">Sort</string>
    <string name="todoimage">todoImage</string>
    <string name="tasks">Tasks</string>
    <string name="favourites">Favourites</string>
    <string name="no_tasks_yet">No Tasks Pending..</string>
    <string name="no_starred_tasks">No Starred Tasks Yet..</string>
    <string name="subtasks">SubTasks</string>
    <string name="description">Description</string>
    <string name="txt">Add Task</string>
    <string name="enter_task">Enter Task Name..</string>
    <string name="enter_description">Enter Description</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="completed">Completed</string>
    <string name="no_completed_tasks">No Completed Tasks..</string>
    <string name="subtasksTxt">SubTasks</string>
    <string name="no_sub_tasks">No Sub Tasks Pending..</string>
    <string name="back">back</string>
    <string name="sub_tasks">Sub Tasks</string>
    <string name="created_modified_on">Created / Modified On :</string>
    <string name="completed_on">Completed On :</string>
    <string name="empty"> --------</string>
    <string name="sub_task_details">Sub Task Details</string>
    <string name="task_details">Task Details</string>
    <string name="name_ascending">Name Ascending</string>
    <string name="date_ascending">Date Ascending</string>
    <string name="name_descending">Name Descending</string>
    <string name="date_descending">Date Descending</string>
    <string name="update_subtask">Update SubTask</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="update_task">Update Task</string>
</resources>